--- a/bonsu/docs/_static/basic.css
+++ b/bonsu/docs/_static/basic.css
@@ -55,7 +55,7 @@ div.sphinxsidebarwrapper {
 
 div.sphinxsidebar {
     float: left;
-    width: 230px;
+    width: 25%;
     margin-left: -100%;
     font-size: 90%;
     word-wrap: break-word;
@@ -222,8 +222,8 @@ table.modindextable td {
 /* -- general body styles --------------------------------------------------- */
 
 div.body {
-    min-width: 360px;
-    max-width: 800px;
+    min-width: 50%;
+    max-width: 75%;
 }
 
 div.body p, div.body dd, div.body li, div.body blockquote {
